small chages to cards

--- a/src/app/quiz/quizResults/quizResults.html
+++ b/src/app/quiz/quizResults/quizResults.html
@@ -2,6 +2,9 @@
     <hymn-header></hymn-header>
     <div class="view-content">
         <div class="col-sm-10">
+            <md-card *ngIf="!resources">
+                <p> Sorry, we didn't find any matches for you in this category. Click <a routerLink="/view/resources/{{type}}">here</a> to browse all our {{type}}</p>
+            </md-card>
             <md-card *ngFor="let resource of resources">
                 <div class="resource-card-header">
                     <md-card-subtitle>{{type}}</md-card-subtitle>
@@ -25,12 +28,12 @@
                         </ul>
                         <ul>
                             <li *ngIf="resource?.parent"><b>Parent Organization or Source:</b> {{ resource?.parent }}</li>
-                            <li><b>Categories that this resource relates into:</b> {{ resource?.categories }}</li>
-                            <li><b>Topics/concerns addressed by this resource:</b> {{ resource?.topics }} </li>
-                            <li><b>Accompaniments that this resource address or lend itself toward:</b> {{ resource?.accompaniment }}</li>
-                            <li><b>Languages represented in this resource?</b> {{ resource?.languages }}</li>
-                            <li><b>Ensembles are addressed:</b> {{ resource?.ensembles }}</li>
-                            <li><b>Ethnicities represented:</b> {{ resource?.ethnicities }}</li>
+                            <li><b>Categories that this resource relates into:</b> {{ resource?.categories.join(', ') }}</li>
+                            <li><b>Topics/concerns addressed by this resource:</b> {{ resource?.topics.join(', ') }} </li>
+                            <li><b>Accompaniments that this resource address or lend itself toward:</b> {{ resource?.accompaniment.join(', ') }}</li>
+                            <li><b>Languages represented in this resource?</b> {{ resource?.languages.join(', ') }}</li>
+                            <li><b>Ensembles are addressed:</b> {{ resource?.ensembles.join(', ') }}</li>
+                            <li><b>Ethnicities represented:</b> {{ resource?.ethnicities.join(', ') }}</li>
                         </ul>
                         <ul class="float-right">
                             <li *ngIf="resource?.pract_schol === 'Both'"> <i>A Practical and Scholarly Resource</i></li>
@@ -56,14 +59,15 @@
                             <li *ngIf="resource?.hymn_soc_member == 'false'"><b>{{resource?.last_name}} is not a Hymn Society Member</b></li>
                         </ul>
                         <ul>
-                            <li><b>Ensembles you are comfortable working with:</b> {{ resource?.ensembles }}</li>
-                            <li><b>Song/hymn(s) has your congregation sung in the last 2 months:</b> {{ resource?.categories }}</li>
-                            <li><b>Instruments used by your congregation during congregational singing:</b> {{ resource?.instruments }} </li>
-                            <li><b>Languages spoken:</b> {{ resource?.languages }}</li>
-                            <li><b>Ethnicities worked with in at least 20% of your events:</b> {{ resource?.ethnicities }}</li>
-                            <li><b>Do you work with resources that are practical, scholarly, or both:</b> {{ resource?.pract_schol }}</li>      
+                            <li><b>Ensembles you are comfortable working with:</b> {{ resource?.ensembles.join(', ') }}</li>
+                            <li><b>Song/hymn(s) has your congregation sung in the last 2 months:</b> {{ resource?.categories.join(', ') }}</li>
+                            <li><b>Instruments used by your congregation during congregational singing:</b> {{ resource?.instruments.join(', ') }} </li>
+                            <li><b>Languages spoken:</b> {{ resource?.languages.join(', ') }}</li>
+                            <li><b>Ethnicities worked with in at least 20% of your events:</b> {{ resource?.ethnicities.join(', ') }}</li>
                         </ul>
                         <ul class="float-right">
+                            <li *ngIf="resource?.pract_schol === 'Both'"> <i>Works with Practical and Scholarly Resources</i></li>
+                            <li *ngIf="resource?.pract_schol != 'Both'"> <i>Works with {{ resource?.pract_schol }} Resources</i></li>
                             <li *ngIf="resource?.url"><a href="{{ resource?.url }}"><md-icon>launch</md-icon> Link to this person's website</a></li>
                         </ul>
                     </md-card-content> <!-- end persons card-block -->
@@ -80,11 +84,11 @@
                             <li><b>Geographic area(s) served by this organization:</b> {{ resource?.geographic_area }}</li>
                             <li><b>Organization mission:</b> {{ resource?.mission }}</li>
                             <li><b>Organization encourages congregational song by:</b> {{ resource?.process }}</li>
-                            <li><b>Types of song/hymn(s) used or referenced in the past year:</b> {{ resource?.categories }}</li>
-                            <li><b>Types of instruments used during congregational singing:</b> {{ resource?.instruments }}</li> 
+                            <li><b>Types of song/hymn(s) used or referenced in the past year:</b> {{ resource?.categories.join(', ') }}</li>
+                            <li><b>Types of instruments used during congregational singing:</b> {{ resource?.instruments.join(', ') }}</li> 
                             <li><b>Shape of worship:</b> {{ resource?.shape }}</li>
                             <li><b>Pastor/priest clothing when he/she preaches?</b> {{ resource?.clothing }}</li>
-                            <li><b>Ethnicities make up at least 20% of organization:</b> {{ resource?.ethnicities }}</li>
+                            <li><b>Ethnicities make up at least 20% of organization:</b> {{ resource?.ethnicities.join(', ') }}</li>
                         </ul>
                         <ul class="float-right">
                             <li *ngIf="resource?.is_org_free =='true'"> <i>Offers free resources</i> </li>
@@ -110,9 +114,9 @@
                             <li><b>Country:</b> {{ resource?.country }}</li>
                             <li><b>State/Province:</b> {{ resource?.state }}</li>
                             <li><b>City:</b> {{ resource?.city }}</li>
-                            <li><b>What types of ensembles are you comfortable working with?</b> {{ resource?.ensembles }}</li>
+                            <li><b>What types of ensembles are you comfortable working with?</b> {{ resource?.ensembles.join(', ') }}</li>
                             <li><b>Which best describes the shape of your worship?</b> {{ resource?.shape }}</li>
-                            <li><b>What types of ensembles are addressed in this event?</b> {{ resource?.ensembles }}</li>
+                            <li><b>What types of ensembles are addressed in this event?</b> {{ resource?.ensembles.join(', ') }}</li>
                             <li><b>What does your pastor/priest wear when he/she preaches?</b> {{ resource?.clothing }}</li>
                             <li><b>On average, how many people will attend your event?</b> {{ resource?.attendance }}</li>
                         </ul>
@@ -130,13 +134,12 @@
                         </ul>
                         <ul>
                             <li><b>Denomination/Tradition:</b> {{ resource?.denomination }}</li>
-                            <li><b>Hymn Society members in congregation or on church staff?</b>  {{ resource?.hymn_soc_member }}</li>
-                            <li><b>Song/hymn(s) congregation sang in the last 2 months:</b> {{ resource?.categories }}</li>
-                            <li><b>Instruments congregation used during congregational singing:</b> {{ resource?.instruments }}</li> 
+                            <li><b>Song/hymn(s) congregation sang in the last 2 months:</b> {{ resource?.categories.join(', ') }}</li>
+                            <li><b>Instruments congregation used during congregational singing:</b> {{ resource?.instruments.join(', ') }}</li> 
                             <li><b>Shape of worship:</b> {{ resource?.shape }}</li>
                             <li><b>Pastor/priest wears when he/she preaches:</b> {{ resource?.clothing }}</li>
                             <li><b>The congregation is:</b> {{ resource?.geography }}</li>
-                            <li><b>Ethnicities making up at least 20% of the congregation:</b> {{ resource?.ethnicities }}</li>
+                            <li><b>Ethnicities making up at least 20% of the congregation:</b> {{ resource?.ethnicities.join(', ') }}</li>
                             <li><b>On average, how many people attend your weekly worship services?</b> {{ congregation?.attendance }}</li>
                         </ul>
                         <ul class="float-right">
