show/collapse button

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,7 +1,7 @@
 <header class="header nav navbar-default">
   <p class="header-title">
     <a href="/" routerLink="/">
-      The Center for Congregational Song
+      Go to Resource Finder Home
     </a>
   </p>
   <button *ngIf="display" md-icon-button [mdMenuTriggerFor]="menu">
