--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,9 +3,8 @@
   <hymn-title></hymn-title>
   <main class="main">
       <div class="options">
-        <button md-raised-button color="primary" (click)=toLogIn()>Enter in resources</button>
-        <button md-raised-button (click)=toViewAll()>Explore on my own</button> 
-        <button md-raised-button color="accent" (click)=toQuiz()>Take the quiz</button> 
+        <button md-raised-button (click)=toViewAll()>Browse All Resources</button> 
+        <button md-raised-button color="accent" (click)=toQuiz()>Help me find resources</button> 
       </div>
       
   </main>
