--- a/src/app/landing/title/title.html
+++ b/src/app/landing/title/title.html
@@ -1,3 +1,3 @@
 <div class="title">
-  <h1 class="title-h1">Connecting people to congregational song</h1>
+  <h1 class="title-h1">CCS Resource Connector</h1>
 </div>
