--- a/src/app/view/view/view.html
+++ b/src/app/view/view/view.html
@@ -9,7 +9,7 @@
 
                     <md-card class="resource-card" (click)="navigate(tile.routerLink)">
                         <!--<div md-card-avatar class="resource-header-image"><md-icon>{{tile.icon}}</md-icon></div>-->
-                        <h5>{{tile.text}}</h5>
+                        <p><b>{{tile.text}}</b></p>
                         <img md-card-image src={{tile.image}}>
                       
                     </md-card>
