--- a/src/app/edit/editResources/editResources.html
+++ b/src/app/edit/editResources/editResources.html
@@ -60,11 +60,24 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Is a Hymn Society member involved?</b> {{ resource?.data.hymn_soc_member }}
+                <span *ngIf="resource?.data.hymn_soc_member === 'partially'">
+                    <b style="font-weight: 700;">Is a Hymn Society member involved?</b> Unknown
+                </span>
+                <span *ngIf="resource?.data.hymn_soc_member == 'true'">
+                    <b style="font-weight: 700;">Is a Hymn Society member involved?</b> Yes
+                </span>
+                <span *ngIf="resource?.data.hymn_soc_member == 'false'">
+                    <b style="font-weight: 700;">Is a Hymn Society member involved?</b> No
+                </span>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Is this resource free?</b> {{ resource?.data.is_free }}
+                <span *ngIf="resource?.data.is_free === 'We do not offer this'">
+                    <b style="font-weight: 700;">Is this resource free?</b> Partially with paywall
+                </span>
+                <span *ngIf="resource?.data.is_free != 'We do not offer this'">
+                    <b style="font-weight: 700;">Is this resource free?</b> {{ resource?.data.is_free }}
+                </span>
                 <br>
                 <br>
                 <br>
