new branding styles

--- a/src/app/quiz/quizResults/quizResults.scss
+++ b/src/app/quiz/quizResults/quizResults.scss
@@ -8,10 +8,10 @@ md-card {
     background-size: cover;
   }
   a {
-    color: #64B5F6;
+    color: #ffad40;
   }
   md-icon {
-    color: #64B5F6;
+    color: #ffad40;
   }
   ul {
     list-style-type: none;
