--- a/src/app/view/view/view.scss
+++ b/src/app/view/view/view.scss
@@ -16,7 +16,7 @@
 }
 
 .resource-card:hover {
-  background-color: #64B5F6;
+  background-color: #ffad40;
   img {
     opacity: .5;
   }
@@ -29,3 +29,5 @@
 md-card-header {
   overflow: hidden;
 }
+
+/*#64B5F6*/
