--- a/src/app/view/viewResources/viewResources.scss
+++ b/src/app/view/viewResources/viewResources.scss
@@ -8,10 +8,10 @@ md-card {
     background-size: cover;
   }
   a {
-    color: #64B5F6;
+    color: #ffad40;
   }
   md-icon {
-    color: #64B5F6;
+    color: #ffad40;
   }
   ul {
     list-style-type: none;
