--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,36 +6,45 @@
 /*@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';*/
 
 @import '~@angular/material/core/theming/all-theme';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400');
 
 @include mat-core();
 
-$hymn-app-primary: mat-palette($mat-blue, 800);
-$hymn-app-accent:  mat-palette($mat-light-blue, 600, A100, A400);
+/*$hymn-app-primary: mat-palette($mat-blue, 800);*/
+/*$hymn-app-accent:  mat-palette($mat-light-blue, 600, A100, A400);*/
 
 $hymn-app-warn:    mat-palette($mat-red);
+
+$hymn-app-primary: mat-palette($mat-orange);
+$hymn-app-accent:  mat-palette($mat-orange, 300, A100, A400);
 
 $hymn-app-theme: mat-light-theme($hymn-app-primary, $hymn-app-accent, $hymn-app-warn);
 
 @include angular-material-theme($hymn-app-theme);
 
 
-$primary-color: #1565C0;
-$secondary-color: #3988CC;
+// $primary-color: #1565C0;
+// $secondary-color: #3988CC;
+
+$primary-color: #ffa300;
+$secondary-color: #ffad40;
+
+
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html, body, #root {
   margin: 0;
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #fafafa;
 }
 
 body, h1, h2, h3 {
   font-weight: 300;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -84,7 +93,7 @@ a {
   flex: 1;
   font-size: 1rem;
   margin: 1rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 .header-date {
   flex: 1;
@@ -98,7 +107,7 @@ a {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  color: #2e6da4;
+  color: #e4002b;
   min-height: 80%; 
   font-family: 'Open Sans', 'sans-serif';
 }
@@ -130,6 +139,10 @@ a {
 .options {
   text-align: center;
   margin: 15rem 0rem 1rem 0rem;
+}
+
+md-card {
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 .entry-body {
