--- a/src/app/review/reviewCongregations/reviewCongregations.html
+++ b/src/app/review/reviewCongregations/reviewCongregations.html
@@ -20,7 +20,7 @@
                                     <h6 class="media-heading">
                                         <ul>
                                             <li>
-                                                <a [routerLink]="resources.id" md-button>{{ resources.title }}, submitted by {{ resources.user }} </a>
+                                                <a [routerLink]="resources.id" md-button>{{ resources.name }}, submitted by {{ resources.user }} </a>
                                             </li>
                                        </ul>
                                     </h6>
