deploying again with new red button 🙃"

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
   <main class="main">
       <div class="options">
         <button md-raised-button (click)=toViewAll()>Browse All Resources</button> 
-        <button md-raised-button color="accent" (click)=toQuiz()>Help me find resources</button> 
+        <button md-raised-button class="landing-button" (click)=toQuiz()>Help me find resources</button> 
       </div>
       
   </main>
