--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,11 @@ a {
   margin: .5rem;
 }
 
+.landing-button {
+  background-color: #fc4f5e;
+  color: #fff !important;
+}
+
 .footer {
   padding: 0.5rem;
   font-size: 1rem;
