briand changes and small changes to edit forms

--- a/src/app/review/reviewEvents/reviewEvents.html
+++ b/src/app/review/reviewEvents/reviewEvents.html
@@ -6,7 +6,7 @@
         <div class="col-md-8 offset-md-3">
             <md-card>
                 <md-card-subtitle>Events</md-card-subtitle>
-                <md-card-title><h4>Select a resource to review</h4></md-card-title>
+                <md-card-title><h4>Select an event to review</h4></md-card-title>
                 <md-card-content>
 
                     <div *ngIf="resources?.length == 0" class="well">
