--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -113,19 +113,8 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.url"
                             name="personUrl"
-                            #personUrl="ngModel"
-                            required/>
+                            #personUrl="ngModel"/>
                         </md-input-container>
-                        <div class="alert alert-danger" *ngIf="personUrl.errors && personUrl.touched">
-                            <ul>
-                                <li [hidden]="!personUrl.errors.required">
-                                    URL is required
-                                </li>
-                                <li>
-                                    Please follow this format: https://www.google.com
-                                </li>
-                            </ul>
-                        </div>
                     </div>
 
                     <div class="form-group">
