--- a/src/app/review/reviewOrganizations/reviewOrganizations.html
+++ b/src/app/review/reviewOrganizations/reviewOrganizations.html
@@ -6,7 +6,7 @@
         <div class="col-md-8 offset-md-3">
             <md-card>
                 <md-card-subtitle>Organizations</md-card-subtitle>
-                <md-card-title><h4>Select a resource to review</h4></md-card-title>
+                <md-card-title><h4>Select an organization to review</h4></md-card-title>
                 <md-card-content>
 
                     <div *ngIf="resources?.length == 0" class="well">
