adding checkbox changes for robustness

--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -40,11 +40,11 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Event start date:</b>  {{ event?.data.event_date }}
+                <b style="font-weight: 700;">Event start date:</b>  {{ startDate }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Event end date:</b>  {{ event?.data.event_end_date }}
+                <b style="font-weight: 700;">Event end date:</b>  {{ endDate }}
                 <br>
                 <br>
                 <br>
@@ -73,15 +73,11 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What types of ensembles are you comfortable working with?</b> {{ event?.data.ensembles }}
+                <b style="font-weight: 700;">What ensembles help lead your event??</b> {{ event?.data.ensembles }}
                 <br>
                 <br>
                 <br>
                 <b style="font-weight: 700;">Which best describes the shape of your worship?</b> {{ event?.data.shape }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">What types of ensembles are addressed in this event?</b> {{ event?.data.ensembles }}
                 <br>
                 <br>
                 <br>
