--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -329,7 +329,7 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.shape.Other"
                             name="congregationShape"
-                            placeholder="Other shape"
+                            placeholder="Other Shape"
                             name="congregationShapeOther"/>
                             </md-input-container>
                         </md-checkbox>
@@ -372,7 +372,7 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.clothing.Other"
                             name="congregationAttire"
-                            placeholder="Other forms of attire"
+                            placeholder="Other Forms of Attire"
                             name="congregationAttireOther"/>
                             </md-input-container>
                         </md-checkbox>
