--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -112,8 +112,7 @@
                             id="personUrl" 
                             class="form-control" 
                             [(ngModel)]="submission.data.url"
-                            name="personUrl"
-                            #personUrl="ngModel"/>
+                            name="personUrl"/>
                         </md-input-container>
                     </div>
 
