--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -24,7 +24,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Event website:</b> <a href="{{ event?.data.url }}">{{ event?.data.url }}</a>  
+                <b style="font-weight: 700;">Event website:</b> <a target="_blank" href="{{ event?.data.url }}">{{ event?.data.url }}</a>  
                 <br>
                 <br>
                 <br>
