--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -32,19 +32,19 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Website:</b> <a href="{{ person?.data.url }}">{{ person?.data.url }}</a>
+                <b style="font-weight: 700;">Website:</b> <a target="_blank" href="{{ person?.data.url }}">{{ person?.data.url }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Facebook:</b> <a href="{{ person?.data.social_facebook }}">{{ person?.data.social_facebook }}</a>
+                <b style="font-weight: 700;">Facebook:</b> <a target="_blank" href="{{ person?.data.social_facebook }}">{{ person?.data.social_facebook }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Twitter:</b> <a href="{{ person?.data.social_twitter }}">{{ person?.data.social_twitter }}</a>
+                <b style="font-weight: 700;">Twitter:</b> <a target="_blank" href="{{ person?.data.social_twitter }}">{{ person?.data.social_twitter }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Other social media connections:</b> <a href="{{ person?.data.social_other }}">{{ person?.data.social_other }}</a> 
+                <b style="font-weight: 700;">Other social media connections:</b> <a target="_blank" href="{{ person?.data.social_other }}">{{ person?.data.social_other }}</a> 
                 <br>
                 <br>
                 <br>
