--- a/src/app/edit/editResources/editResources.html
+++ b/src/app/edit/editResources/editResources.html
@@ -20,7 +20,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">URL:</b> <a href="{{ resource?.data.url }}">{{ resource?.data.url }}</a>
+                <b style="font-weight: 700;">URL:</b> <a target="_blank" href="{{ resource?.data.url }}">{{ resource?.data.url }}</a>
                 <br>
                 <br>
                 <br>
