--- a/src/app/shared/entryNavbar/entryNavbar.html
+++ b/src/app/shared/entryNavbar/entryNavbar.html
@@ -13,6 +13,7 @@
       <h5>Admin Options</h5>
       <li><a md-button (click)="openDialog('/entry/register')">Register Users</a></li>
        <li><a md-button (click)="openDialog('/review')">Review Entries</a></li>
+       <li><a md-button (click)="openDialog('/review')">View All Resources</a></li>
     </ul>
 </div>
 <div>
