--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -1,3 +1,37 @@
-<p>
-  view-all-resources works!
-</p>
+<div class="entry-container right">
+  <entry-nav class="left"></entry-nav>
+  <hymn-header></hymn-header>
+  <entry-nav-modal></entry-nav-modal>
+  <div class="entry-body row">
+      <div class="col-md-8 offset-md-3">
+          <md-card>
+              <md-card-subtitle>Events</md-card-subtitle>
+              <md-card-title><h4>Select an event to review</h4></md-card-title>
+              <md-card-content>
+
+                  <div *ngIf="resources?.length == 0" class="well">
+                      There are no unapproved resources in the database.
+                  </div>
+
+                  <div *ngIf="resources?.length > 0">
+                      <div class="media" *ngFor="let resources of resources; let index = index;">
+                          <div class="media-body">
+                              <div>
+                                  <h6 class="media-heading">
+                                      <ul>
+                                          <li>
+                                              <a [routerLink]="resources.id" md-button>{{ resources.title }}, submitted by {{ resources.user }} </a>
+                                          </li>
+                                     </ul>
+                                  </h6>
+                              </div>
+
+                          </div>
+                      </div>
+                  </div>
+
+              </md-card-content> <!-- end class card-block-->
+          </md-card> <!-- end class card -->
+      </div> <!-- end class col-md-8 offset-md-2 -->
+  </div> <!-- end entry-body row -->
+</div>
