--- a/src/app/shared/entryNavbar/entryNavbar.html
+++ b/src/app/shared/entryNavbar/entryNavbar.html
@@ -13,7 +13,8 @@
       <h5>Admin Options</h5>
       <li><a md-button (click)="openDialog('/entry/register')">Register Users</a></li>
        <li><a md-button (click)="openDialog('/review')">Review Entries</a></li>
-       <li><a md-button (click)="openDialog('/review/allResources')">View All Resources</a></li>
+       <!-- <li><a md-button (click)="openDialog('/review/allResources')">View All Resources</a></li> -->
+       <li><a md-button routerLink="/review/allResources">View All Resources</a></li>
     </ul>
 </div>
 <div>
