--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -5,8 +5,8 @@
   <div class="entry-body row">
       <div class="col-md-8 offset-md-3">
           <md-card>
-              <md-card-subtitle>TEST!!!</md-card-subtitle>
-              <md-card-title><h4>Select an event to review</h4></md-card-title>
+              <md-card-subtitle>All Resources</md-card-subtitle>
+              <md-card-title><h4>Total resources: {{ resources.length }}</h4></md-card-title>
               <md-card-content>
 
                   <div *ngIf="resources?.length == 0" class="well">
