--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -6,7 +6,7 @@
       <div class="col-md-8 offset-md-3">
           <md-card>
               <md-card-subtitle>All Resources</md-card-subtitle>
-              <!-- <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title> -->
+              <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
               <md-card-content>
 
                     <!-- <mat-table #table [dataSource]="dataSource">
