--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -35,7 +35,7 @@
                             
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                            </mat-table> -->
+                            </mat-table> test -->
 
                   <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
