--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -18,8 +18,8 @@
                               </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let resource of resources" onclick="window.location='{{ resource.id }}';">
-                                <td>{{ resource.id }}</td>
+                            <tr *ngFor="let resource of resources">
+                                <td><a [routerLink]="resource.id">{{ resource.id }}</a></td>
                                 <td>{{ resource.type }}</td>
                                 <td>{{ resource.author }}</td>
                             </tr>
