--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -18,7 +18,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let resource of resources">
+                            <tr *ngFor="let resource of resources; let index = index;">
                                 <td><a [routerLink]="resource.id">{{ resource.id }}</a></td>
                                 <td>{{ resource.type }}</td>
                                 <td>{{ resource.author }}</td>
@@ -27,7 +27,7 @@
                         </table>
                   <!-- <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
-                  </div>
+                  </div> -->
 
                   <div *ngIf="resources?.length > 0">
                       <div class="media" *ngFor="let resources of resources; let index = index;">
@@ -44,7 +44,7 @@
 
                           </div>
                       </div>
-                  </div> -->
+                  </div>
 
               </md-card-content> <!-- end class card-block-->
           </md-card> <!-- end class card -->
