--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -28,7 +28,7 @@
                   <!-- <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
                   </div> -->
-
+<!-- 
                   <div *ngIf="resources?.length > 0">
                       <div class="media" *ngFor="let resources of resources; let index = index;">
                           <div class="media-body">
@@ -44,7 +44,7 @@
 
                           </div>
                       </div>
-                  </div>
+                  </div> -->
 
               </md-card-content> <!-- end class card-block-->
           </md-card> <!-- end class card -->
