Added button to table rows

--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -19,7 +19,7 @@
                             </thead>
                             <tbody>
                             <tr *ngFor="let resource of resources; let index = index;">
-                                <td><a [routerLink]="resource.id">{{ resource.id }}</a></td>
+                                <td><a [routerLink]="resource.id"><button class="btn btn-primary">{{ resource.id }}</button></a></td>
                                 <td>{{ resource.type }}</td>
                                 <td>{{ resource.author }}</td>
                             </tr>
